brat/test/golden/error/remaining_hopes.brat
f(n :: #) -> Nat
f(n) = n

g :: Nat
g = f(!)
