brat/test/golden/error/remaining_hopes.brat.golden
Error in test/golden/error/remaining_hopes.brat on line 5:
g = f(!)
     ^^^

  Expected to work out values for these holes:
    In checking_check_defs_1_g_1_Eval 0


